fixed alignment of version number

--- a/static/css/themes/void/void.css
+++ b/static/css/themes/void/void.css
@@ -171,10 +171,10 @@ a {
   bottom: 0;
   border-radius: 15px;
   font-family: 'Noto Sans';
-  width: 20%;
+  width: 10%;
   height: 5%;
   background-color: var(--blur-bg-dark);
-    backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   padding-top: 7.5px;
   padding-bottom: 10px;
   text-align: center;
@@ -184,7 +184,7 @@ a {
 }
 
 #footer p {
-  margin: 0;
+  margin-top: 14px;
 }
 
 .fa {
